# simpex

./: README.md  pyproject.toml  regex_cheatsheet.md
simpex/: __init__.py  simpex.py
